# mcp

./: .env.example  .gitignore  Caddyfile.prod  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: live-tests.yml  soak.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ISSUE-5-session-counting.md  ISSUE-6-search-latency.md
docs/: envelope.md  errors.md  index.md  injection-resistance.md  privacy.md  rate-limits.md  tools.md
scripts/: deploy-docs.sh  validate_links.sh
scripts/soak/: report.py  rss_sampler.py  run_soak.py  workload.py
site/: 404.html  index.html  sitemap.xml
site/envelope/: index.html
tests/: conftest.py  test_admin_metrics.py  test_app.py  test_app_lifespan_contract.py  test_citation_synthesis.py  test_config.py  test_config_lookup_single_source.py  test_content_policy_emission.py  test_cursor.py  test_datasette_client_retry.py  test_dependency_footprint.py  test_envelope.py  test_envelope_contract.py  test_envelope_snapshot.py  test_error_catalog.py  test_filter_compiler.py  test_filter_value_safety.py  test_fts_escape.py  test_hidden_data_enforcement.py  test_hostile_inputs_consolidated.py  test_input_models_forbid.py  test_live_golden_path.py  test_logging.py  test_mcp_client_smoke.py  test_mcp_streamable_smoke.py  test_metadata_cache.py  test_prompts.py  test_rate_limit.py  test_resolve_preview_columns.py  test_retrieved_at_middleware.py  test_search_timing.py  test_search_value_safety.py  test_soak_auth.py  test_tool_trailer.py
(+145 files in other folders)
